# bar1_project

./: README.md  mesh_tools.R
cellid/cellID-1.4.3_hack/: Makefile  NEWS  README.linux  README.windows  cell.c  cell_id_description_of_output_file_V1.3a.txt  cell_id_description_of_output_files.txt  description_of_output_files.txt  flatten.c  output_col_names.txt  parameters.full.txt  parameters.h  parameters.txt  segment.c  segment.c_28012011  segment.c_OLD  segment.h  time_of_t0.txt
dune/: ExtracellularCommunication.pc.in  Makefile.am  configure.ac  dune.module
dune/doc/: Makefile.am
dune/doc/doxygen/: Doxylocal
dune/dune/: Makefile.am
dune/dune/ExtracellularCommunication/: ExtracellularCommunication.hh  Makefile.am
dune/m4/: ExtracellularCommunication.m4  Makefile.am
dune/src/: Makefile.am
dune/src/2d3d-comparison/: 1-cell-3d.msh  2dmesh.msh  3cells-2d.msh  3d-physical.msh  3dmesh.msh  5cells-2d.msh  Makefile.am  alphaAbsorption_stat.hh  comparison.cc  comparison_fv_fix.hh  comparison_stat.cc  comparison_stat.ini  concentrationChange.hh  data.ini  diffusionccfv_update.hh  diffusiondg.hh  driver_dg.hh  instationary.cc  instationary2d.cc  physical-sphere.msh  shapes.msh  stationary.cc  stationary2d.cc  stationary2d.ini  stationary3d.cc  toperator.hh  yeast_dg_fix.hh  yeast_fv_fix.hh
dune/src/2d3d-comparison/.deps/: comparison-comparison.Po
dune/src/2d3d-comparison/bc/: Makefile.am  alpha_bc.hh  alpha_bc_test.hh  bar1p_bc.hh  bar1p_bc_test.hh  diffusion_tensor_bar1p.hh
dune/src/Bar1AlphaInstationary/: Doxyfile  Makefile.am  alphaAbsorption.hh  bar1Boundary.hh  diffusiondg.hh  driver_dg.hh
dune/src/Bar1AlphaInstationary/bc/: Makefile.am  alpha_bc.hh  bar1p_bc.hh  diffusion_tensor_alpha.hh
dune/src/Bar1AlphaStationary/: Doxyfile  Makefile.am  alphaAbsorption.hh  diffusionccfv_update.hh  diffusiondg.hh  stationary.cc  yeast_dg_fix.hh  yeast_fv_fix.hh
dune/src/Bar1AlphaStationary/bc/: alpha_bc.hh  bar1p_bc.hh  diffusion_tensor_alpha.hh  diffusion_tensor_bar1p.hh
dune/src/FitAlpha/: Makefile.am  alphaAbsorption.hh  bfgs_fit.h  diffusionccfv_update.hh  diffusiondg.hh  fit_bfgs.cc  fit_nm.cc  nm_fit.h  yeast_dg_fix.hh  yeast_fv_fix.hh
dune/src/FitAlpha/.deps/: fit_bfgs-fit_bfgs.Po  fit_nm-fit_nm.Po
dune/src/FitAlpha/bc/: Makefile.am  alpha_bc.hh  bar1p_bc.hh
dune/src/data/: 50distance.msh  Makefile.am  cells22533.msh  cells6158.msh  cells_2ndorder.msh  cells_P10.msh  cells_poly.msh  conf.txt  conf_P10.txt  conf_instationary.txt  equaldistance.msh
tasks/: alpha_fit.R  bar1_fit.R  grid_to_m.py  subpop.R  verification.R
